--- a/style.css
+++ b/style.css
@@ -1,191 +1,160 @@
-.visual {
-    position: relative;
-    width: 100%;
-    height: 120vh;
+@charset "utf-8";
+
+/*========= ローディングのCSS ===============*/
+.pixel-spinner, .pixel-spinner * {
+	box-sizing: border-box;
+  }
+
+  .pixel-spinner {
+	height: 70px;
+	width: 70px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+  }
+
+  .pixel-spinner .pixel-spinner-inner {
+	width: calc(70px / 7);
+	height: calc(70px / 7);
+	background-color: #ff1d5e;
+	color: #ff1d5e;
+	box-shadow: 15px 15px  0 0,
+				-15px -15px  0 0,
+				15px -15px  0 0,
+				-15px 15px  0 0,
+				0 15px  0 0,
+				15px 0  0 0,
+				-15px 0  0 0,
+				0 -15px 0 0;
+	animation: pixel-spinner-animation 2000ms linear infinite;
+  }
+
+  @keyframes pixel-spinner-animation {
+	50% {
+	  box-shadow: 20px 20px 0px 0px,
+				  -20px -20px 0px 0px,
+				  20px -20px 0px 0px,
+				  -20px 20px 0px 0px,
+				  0px 10px 0px 0px,
+				  10px 0px 0px 0px,
+				  -10px 0px 0px 0px,
+				  0px -10px 0px 0px;
+	}
+	75% {
+	  box-shadow: 20px 20px 0px 0px,
+				  -20px -20px 0px 0px,
+				  20px -20px 0px 0px,
+				  -20px 20px 0px 0px,
+				  0px 10px 0px 0px,
+				  10px 0px 0px 0px,
+				  -10px 0px 0px 0px,
+				  0px -10px 0px 0px;
+	}
+	100% {
+	  transform: rotate(360deg);
+	}
+  }
+
+  .loaded {
+	opacity: 0;
+	visibility: hidden;
+  }
+
+/*========= 背景動画設定のCSS ===============*/
+
+/*header設定*/
+#header {
+	position: relative;
+	/*h1の中央寄せ配置の起点とするためのrelative*/
+	height: 100vh;
+	/*高さを全画面にあわせる*/
 }
 
-.movie {
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
-
-.movie video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    width: auto;
-    height: auto;
-    min-width: 100%;
-    min-height: 100%;
-    transform: translate(-50%, -50%);
-}
-
-
-/* ドットフィルター */
-.movie::after {
-	content: '';
-	display: block;
-	position: absolute;
+#video-area {
+	position: fixed;
+	z-index: -1;
+	/*最背面に設定*/
 	top: 0;
 	right: 0;
-	width: 100%;
-	height: 120vh;
-	background-color: rgba(0,0,0,0.2);
-	background-image: radial-gradient(#111 30%, transparent 31%), radial-gradient(#111 30%, transparent 31%);
-	background-size: 4px 4px;
-	background-position: 0 0, 2px 2px;
+	left: 0;
+	bottom: 0;
+	overflow: hidden;
 }
 
-/* ローディング */
-/*
-body {
-    background-color: #222;
-  }
-  
-  
-  #loading-wrapper {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-  }
-  
-  #loading-text {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    color: #999;
-    width: 100px;
-    height: 30px;
-    margin: -7px 0 0 -45px;
-    text-align: center;
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 20px;
-  }
-  
-  #loading-content {
-    display: block;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    width: 170px;
-    height: 170px;
-    margin: -85px 0 0 -85px;
-    border: 3px solid #F00;
-  }
-  
-  #loading-content:after {
-    content: "";
-    position: absolute;
-    border: 3px solid #0F0;
-    left: 15px;
-    right: 15px;
-    top: 15px;
-    bottom: 15px;
-  }
-  
-  #loading-content:before {
-    content: "";
-    position: absolute;
-    border: 3px solid #00F;
-    left: 5px;
-    right: 5px;
-    top: 5px;
-    bottom: 5px;
-  }
-  
-  #loading-content {
-    border: 3px solid transparent;
-    border-top-color: #4D658D;
-    border-bottom-color: #4D658D;
-    border-radius: 50%;
-    -webkit-animation: loader 2s linear infinite;
-    -moz-animation: loader 2s linear infinite;
-    -o-animation: loader 2s linear infinite;
-    animation: loader 2s linear infinite;
-  }
-  
-  #loading-content:before {
-    border: 3px solid transparent;
-    border-top-color: #D4CC6A;
-    border-bottom-color: #D4CC6A;
-    border-radius: 50%;
-    -webkit-animation: loader 3s linear infinite;
-      -moz-animation: loader 2s linear infinite;
-    -o-animation: loader 2s linear infinite;
-    animation: loader 3s linear infinite;
-  }
-  
-  #loading-content:after {
-    border: 3px solid transparent;
-    border-top-color: #84417C;
-    border-bottom-color: #84417C;
-    border-radius: 50%;
-    -webkit-animation: loader 1.5s linear infinite;
-    animation: loader 1.5s linear infinite;
-      -moz-animation: loader 2s linear infinite;
-    -o-animation: loader 2s linear infinite;
-  }
-  
-  @-webkit-keyframes loaders {
-    0% {
-      -webkit-transform: rotate(0deg);
-      -ms-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      -ms-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  
-  @keyframes loader {
-    0% {
-      -webkit-transform: rotate(0deg);
-      -ms-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      -ms-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  
-  #content-wrapper {
-    color: #FFF;
-    position: fixed;
-    left: 0;
-    top: 20px;
-    width: 100%;
-    height: 100%;
-  }
-  
-  #header
-  {
-    width: 800px;
-    margin: 0 auto;
-    text-align: center;
-    height: 100px;
-    background-color: #666;
-  }
-  
-  #content
-  {
-    width: 800px;
-    height: 1000px;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #888;
-  }
+#video {
+	/*天地中央配置*/
+	position: absolute;
+	z-index: -1;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	/*縦横幅指定*/
+	width: 177.77777778vh;
+	/* 16:9 の幅→16 ÷ 9＝ 177.77% */
+	height: 56.25vw;
+	/* 16:9の幅 → 9 ÷ 16 = 56.25% */
+	min-height: 100%;
+	min-width: 100%;
+}
 
-  */
+/*見出し設定*/
+h1 {
+	/*要素の配置*/
+	position: absolute;
+	/*要素を天地中央寄せ*/
+	top: 50%;
+	left: 50%;
+	transform: translateY(-50%) translateX(-50%);
+	/*見た目の調整*/
+	color: #fff;
+	text-shadow: 0 0 15px #666;
+}
+
+/*========= レイアウトのためのCSS ===============*/
+
+#container {
+	background: rgba(13, 96, 128, 0.607);
+	padding: 300px 0;
+	text-align: center;
+}
+
+/*SNSアイコン*/
+#sns-icons {
+	background: rgba(255, 255, 255, 0.358);
+	padding: 30px 0;
+	position: fixed;
+	right: -50px;
+	bottom: 500px;
+	transition: all 0.5s ease-in-out;
+}
+
+#sns-icons.active {
+	right: 20px;
+}
+
+.textbox {
+	position: absolute;
+	left: -10px;
+}
+.SNS_Text {
+	writing-mode: vertical-rl;
+	text-orientation: upright;
+}
+
+
+ul.icon {
+	list-style: none;
+}
+
+ul.icon>li::before {
+	font-family: "Font Awesome 5 Brands";
+	font-weight: 400;
+	font-size: 2em;
+	margin-right: 10px;
+}
+
+ul.icon>li.icon-twitter::before {
+	content: "f099";
+	color: #00acee;
+}
