--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h1 {
 /*SNSアイコン*/
 #sns-icons {
 	background: rgba(255, 255, 255, 0.358);
-	padding: 30px 0;
+	padding: 1% 0;
 	position: fixed;
 	right: -50px;
 	bottom: 500px;
