--- a/style.css
+++ b/style.css
@@ -1,65 +1,72 @@
 @charset "utf-8";
 
 /*========= ローディングのCSS ===============*/
-.pixel-spinner, .pixel-spinner * {
+.pixel-spinner,
+.pixel-spinner * {
 	box-sizing: border-box;
-  }
+}
 
-  .pixel-spinner {
+.pixel-spinner {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateY(-50%) translateX(-50%);
 	height: 70px;
 	width: 70px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-  }
+}
 
-  .pixel-spinner .pixel-spinner-inner {
+.pixel-spinner .pixel-spinner-inner {
 	width: calc(70px / 7);
 	height: calc(70px / 7);
 	background-color: #ff1d5e;
 	color: #ff1d5e;
-	box-shadow: 15px 15px  0 0,
-				-15px -15px  0 0,
-				15px -15px  0 0,
-				-15px 15px  0 0,
-				0 15px  0 0,
-				15px 0  0 0,
-				-15px 0  0 0,
-				0 -15px 0 0;
+	box-shadow: 15px 15px 0 0,
+		-15px -15px 0 0,
+		15px -15px 0 0,
+		-15px 15px 0 0,
+		0 15px 0 0,
+		15px 0 0 0,
+		-15px 0 0 0,
+		0 -15px 0 0;
 	animation: pixel-spinner-animation 2000ms linear infinite;
-  }
+}
 
-  @keyframes pixel-spinner-animation {
+@keyframes pixel-spinner-animation {
 	50% {
-	  box-shadow: 20px 20px 0px 0px,
-				  -20px -20px 0px 0px,
-				  20px -20px 0px 0px,
-				  -20px 20px 0px 0px,
-				  0px 10px 0px 0px,
-				  10px 0px 0px 0px,
-				  -10px 0px 0px 0px,
-				  0px -10px 0px 0px;
+		box-shadow: 20px 20px 0px 0px,
+			-20px -20px 0px 0px,
+			20px -20px 0px 0px,
+			-20px 20px 0px 0px,
+			0px 10px 0px 0px,
+			10px 0px 0px 0px,
+			-10px 0px 0px 0px,
+			0px -10px 0px 0px;
 	}
-	75% {
-	  box-shadow: 20px 20px 0px 0px,
-				  -20px -20px 0px 0px,
-				  20px -20px 0px 0px,
-				  -20px 20px 0px 0px,
-				  0px 10px 0px 0px,
-				  10px 0px 0px 0px,
-				  -10px 0px 0px 0px,
-				  0px -10px 0px 0px;
-	}
-	100% {
-	  transform: rotate(360deg);
-	}
-  }
 
-  .loaded {
+	75% {
+		box-shadow: 20px 20px 0px 0px,
+			-20px -20px 0px 0px,
+			20px -20px 0px 0px,
+			-20px 20px 0px 0px,
+			0px 10px 0px 0px,
+			10px 0px 0px 0px,
+			-10px 0px 0px 0px,
+			0px -10px 0px 0px;
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+.loaded {
 	opacity: 0;
 	visibility: hidden;
-  }
+}
 
 /*========= 背景動画設定のCSS ===============*/
 
@@ -137,6 +144,7 @@ h1 {
 	position: absolute;
 	left: -10px;
 }
+
 .SNS_Text {
 	writing-mode: vertical-rl;
 	text-orientation: upright;
